test/should-fail/缺少endfunction.j
function test takes nothing returns nothing

function test takes nothing returns nothing
endfunction